# inteagle_app

./: .gitignore  .metadata  README.md  flutter_launcher_icons.yaml  pubspec.yaml
android/: build.gradle  gradle.properties
android/app/: build.gradle
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart
lib/app/: app.dart  error_page.dart  main_app.dart  splash_page.dart
lib/bindings/signals/: big_bool.dart  displacement_record.dart  export_state.dart  (+17 more)
lib/hooks/: useRouteObserver.dart
lib/layout/: custom_title_bar.dart  language_switch.dart  layout_page.dart  theme_switch.dart
lib/models/: app_config.dart  device.dart  discovered_device.dart
lib/pages/: template.dart
lib/providers/: app_config_provider.dart  app_config_provider.g.dart  app_init_provider.dart  app_init_provider.g.dart  device_discovery_provider.dart  device_discovery_provider.g.dart  dio_provider.dart  dio_provider.g.dart
lib/repository/: database.dart  device_repository.dart  wy_device_repository.dart
lib/router/: index.dart  routes.dart
lib/services/: device_discover_service.dart  service.dart
lib/utils/: constants.dart  database_helper.dart
lib/widgets/: empty.dart
native/hub/: Cargo.toml
native/hub/src/: db_mgr.rs  export_data.rs  lib.rs  model.rs  sync_service.rs
native/hub/src/actors/: measurement_query_service.rs  mod.rs  sync_control.rs
native/hub/src/signals/: mod.rs
test/: widget_test.dart
web/: index.html  manifest.json
windows/: CMakeLists.txt
windows/flutter/: generated_plugins.cmake
windows/runner/: Runner.rc  main.cpp
(+10 files in other folders)
